--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
               <button onclick="Sit(document.getElementById('floatingInput').value);" class="w-100 btn btn-lg btn-primary" type="submit" fdprocessedid="i31gyn">Check</button>
               <hr class="mt-4 mb-1">
-              <small class="text-body-secondary mx-auto px-auto">terms and conditions apply.</small>
+              <small class="text-body-secondary mx-auto px-auto"></small>
             </form>
           </div> 
 
