--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                `;
               document.querySelector(".form-container").innerHTML = name;
             });
-              var guestList = JSON.parse(localStorage.getItem("guestList")) || ["Taiwo", "Kenny", "Micheal", "Boniface", "Tonbra", "Marvelous", "Stephen", "Matron", "Iya Atunde", "Teelop", "Racheal", "Ogunfunwa"];
+              var guestList = JSON.parse(localStorage.getItem("guestList")) || ["Mobolaji", "Methodist Girls", "Redeemers", "ISL", "Tonbra", "Western", "Aje", "Ideal", "Aguda", "Jibowu", "Decent", "Havimar", "Staff School", "Royal", "Reagan", "ABS", "Cedar", "Rosecroft"];
                 function Sit(name){
                   var upperCaseName = name.charAt(0).toUpperCase() + name.slice(1).toLowerCase(); 
                     if(guestList.includes(upperCaseName)) {
