--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                `;
               document.querySelector(".form-container").innerHTML = name;
             });
-            var guestList = ["Mobolaji", "Methodist Girls", "Redeemers", "International", "Western", "Aje", "Ideal", "Aguda", "Jibowu", "Decent", "Havimar", "Staff School", "Royal", "Reagan", "ABS", "Cedar", "Rosecroft"];
+            var guestList = ["Mobolaji", "Methodist Girls", "Redeemers", "International", "Western", "Aje", "Ideal", "Aguda", "Jibowu", "Decent", "Havimar", "Staffschool", "Royal", "Reagan", "Abs", "Cedar", "Rosecroft"];
              localStorage.setItem("guestList", JSON.stringify(guestList));
              guestList = JSON.parse(localStorage.getItem("guestList"));
             // var guestList = JSON.parse(localStorage.getItem("guestList")) || ["Mobolaji", "Methodist Girls", "Redeemers", "ISL", "Tonbra", "Western", "Aje", "Ideal", "Aguda", "Jibowu", "Decent", "Havimar", "Staff School", "Royal", "Reagan", "ABS", "Cedar", "Rosecroft"];
