--- a/index.html
+++ b/index.html
@@ -48,9 +48,27 @@
 
               <button onclick="Sit(document.getElementById('floatingInput').value);" class="w-100 btn btn-lg btn-primary" type="submit" fdprocessedid="i31gyn">Check</button>
               <hr class="mt-4 mb-1">
-              <small class="text-body-secondary mx-auto px-5">terms and conditions apply.</small>
+              <small class="text-body-secondary fs-5 text-center d-block w-100">terms and conditions apply.</small>
             </form>
           </div> 
+
+          <!-- FOOTER SECTION -->
+      <div class="container mt-5">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-5 border-top">
+          <div class="col-md-4 col-lg-10 d-flex align-items-center">
+            <!-- <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+            </a> -->
+            <span class="mb-1 mb-md-0 text-body-secondary">© 2025 United Foundation for Linguistics, Culture and Development.</span>
+          </div>
+      
+          <!-- <ul class="nav col-md-4 justify-content-end list-styled d-flex">
+            <li class="ms-3"><a class="text-body-primary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+          </ul> -->
+        </footer>
+      </div>
 
           <script>
               document.addEventListener("DOMContentLoaded", function() {
@@ -77,8 +95,10 @@
                 console.log(guestList);
                 console.log(name);
           </script>
-    </div>
-</div>
+        </div>
+      </div>
+
+      
 
 
 
