--- a/sign.html
+++ b/sign.html
@@ -52,17 +52,35 @@
               <label for="passwordInput">Create Password</label>
             </div>
             
-            <div class="checkbox mb-3">
+            <!-- <div class="checkbox mb-3">
               <label>
                 <input type="checkbox" value="remember-me"> Remember me
               </label>
-            </div>
+            </div> -->
 
             <button class="w-100 btn btn-lg btn-primary" type="submit" fdprocessedid="i31gyn">Sign Up</button>
             <hr class="my-4">
-            <small class="text-body-secondary">By clicking Sign up, you agree to the terms of use.</small>
+            <small class="text-body-secondary text-center d-block w-100">By clicking Sign up, you agree to the terms of use.</small>
           </form>
         </div>
+
+              <!-- FOOTER SECTION -->
+      <div class="container mt-5">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-5 border-top">
+          <div class="col-md-4 col-lg-10 d-flex align-items-center">
+            <!-- <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+            </a> -->
+            <span class="mb-1 mb-md-0 text-body-secondary">© 2025 United Foundation for Linguistics, Culture and Development.</span>
+          </div>
+      
+          <!-- <ul class="nav col-md-4 justify-content-end list-styled d-flex">
+            <li class="ms-3"><a class="text-body-primary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+          </ul> -->
+        </footer>
+      </div>
 
         <script>
           var guestList = JSON.parse(localStorage.getItem("guestList")) || ["Taiwo", "Kenny", "Micheal", "Boniface", "Marvelous", "Stephen", "Matron", "Iya Atunde", "Teelop", "Racheal", "Ogunfunwa", "Tonbra"];
