--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form> -->
           </div>
+          <div>
+            <img src="./src/IMG-20250107-WA0081.jpg" alt="logo" class="img-fluid me-5" style="width: 50px; height: 50px;"/>
+          </div>
         </div>
       </nav>
 
