--- a/sign.html
+++ b/sign.html
@@ -30,6 +30,9 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form> -->
       </div>
+      <div>
+        <img src="./src/IMG-20250107-WA0081.jpg" alt="logo" class="img-fluid me-5" style="width: 50px; height: 50px;" />
+      </div>
     </div>
   </nav>
 
@@ -71,7 +74,7 @@
             <!-- <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
               <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
             </a> -->
-            <span class="mb-1 mb-md-0 text-body-secondary">© 2025 United Foundation for Linguistics, Culture and Development.</span>
+            <p class="mb-1 mb-md-0 text-body-secondary">© <span id="currentYear"></span> United Foundation for Linguistics, Culture and Development.</p>
           </div>
       
           <!-- <ul class="nav col-md-4 justify-content-end list-styled d-flex">
@@ -83,6 +86,8 @@
       </div>
 
         <script>
+          document.getElementById("currentYear").textContent = new Date().getFullYear();
+
           var guestList = JSON.parse(localStorage.getItem("guestList")) || ["Taiwo", "Kenny", "Micheal", "Boniface", "Marvelous", "Stephen", "Matron", "Iya Atunde", "Teelop", "Racheal", "Ogunfunwa", "Tonbra"];
         
           function SIT() {
