--- a/sign.html
+++ b/sign.html
@@ -31,7 +31,7 @@
         </form> -->
       </div>
       <div>
-        <img src="./src/IMG-20250107-WA0081.jpg" alt="logo" class="img-fluid" style="width: 50px; height: 50px;" />
+        <img src="./src/IMG-20250107-WA0081.jpg" alt="logo" class="img-fluid me-5 me-md-0" style="width: 50px; height: 50px;" />
       </div>
     </div>
   </nav>
