--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </form> -->
           </div>
           <div>
-            <img src="./src/IMG-20250107-WA0081.jpg" alt="logo" class="img-fluid me-5 me-md-0" style="width: 50px; height: 50px;"/>
+            <img src="./src/IMG-20250107-WA0081.jpg" alt="logo" class="img-fluid" style="width: 50px; height: 50px;"/>
           </div>
         </div>
       </nav>
@@ -51,7 +51,7 @@
 
               <button onclick="Sit(document.getElementById('floatingInput').value);" class="w-100 btn btn-lg btn-primary" type="submit" fdprocessedid="i31gyn">Check</button>
               <hr class="mt-4 mb-1">
-              <small class="text-body-secondary fs-1 text-center d-block w-100">terms and conditions apply.</small>
+              <small class="text-body-secondary fs-5 text-center d-block w-100">terms and conditions apply.</small>
             </form>
           </div> 
 
